--- a/AI게임/N-back게임.html
+++ b/AI게임/N-back게임.html
@@ -1,1 +1,11 @@
 많은 사람들이 어려워하는 게임이라고 합니다
+
+여러개의 칸이 나뉘어있고 이 칸 중에서 하나씩 불빛이 들어옵니다.
+불빛이 들어오는 스피드는 굉장히 빠릅니다 
+처음 난이도는 2back 다음은 3back이 나온다고 합니다
+2back은 현재 불빛이 들어온 칸이 2번째 전에 불빛이 들어왔던 칸과 일치하면
+일치를 아니면 불일치를 눌러야합니다. 3back은 현재 불빛이 들어온 칸이 3번째 전에
+불빛이 들어왔던 칸과 일치하면 일치 아니면 불일치
+기억력과 집중력이 정말 많이 필요되는 게임입니다
+이것도 한번 놓히더라도 얼마나 빠르게 다시 집중할 수 있는지를 묻고있는 문제입니다
+폰 어플로 연습하면 실력는데여
