감정맞히기 8/27

--- a/AI게임/감정맞히기.html
+++ b/AI게임/감정맞히기.html
@@ -7,3 +7,19 @@
 겁에 질렸다는 표정(놀람 + 미간, 입모양이 변함) , 단순히 눈이 커지고 입이 벌어진다 -> 놀람
 체감상 한 50문제 풀었다고 한다.
 기쁨, 슬픔처럼 극명한 표정을 잘못체크하는 일이 없도록 주의하자
+
+한쪽입꼬리 올라감 -> 경멸(내가 상대방보다 우위에있다)
+턱이살짝들렸고 아랫눈꺼풀에 힘이 들어가잇음 -> 분노
+눈썹이 올라가있고 이마가 긴장해있는 모습 -> 염려, 불안, 걱정(약한두려움)
+마치 멀리있는게 안보일때 눈의 초점을 맞추기 위한 표정 -> 짜증이 났거나 분노를 억누를때
+눈이 상당히 커져있음 -> 두려움이나 놀람을 억누를 때 나타나는 표정
+미간에 인상을 쓰면서 양쪽 입꼬리가 올라가있음 -> 웃음으로 화를 감춤? 당황한 상태를 즐기느 표정(어처구니가 없을때)
+인상을찌푸림(근데 많이 안찌푸린다) -> 불쾌함, 당황함, 못마땅함등 나타냄(목표를 추구하는 과정에서 장애물을 만났을때)
+윗입술이 살짝 들려있음 -> 약하게 역겨움을 느끼고 있거나 혐오를 참고있을 때 나타남, 오만함
+입을 양쪽으로 길게 벌리고 있음 -> 약한 두려움을 나타내는 표정, 공포를 억압하고 있는 표정
+입에 강한 힘을 주고 있어서 입술이 얇아진게 보인다 -> 초기 분노의 표정, 굳은 결심을 나타내기도 한다고합니다
+양쪽입꼬리 위로 눈도 나쁘지않음 -> 기쁨을 나타내는 표정
+양쪽입꼬리 내려가있고 슬픈표정인거같음 -> 그럼 슬픈표정이 맞다
+눈이 조여져있고 코를찡그림 -> 혐오를 나타내는 표정임
+졸린것 같은 표정 -> 졸림 없으면 약한 우울을 나타내는 표정 일 수도 있다
+
