온도,습도 조합-> 맑음 , 풍향,기압-> 흐림

--- a/AI게임/날씨맞히기.html
+++ b/AI게임/날씨맞히기.html
@@ -10,3 +10,15 @@ AI면접에서 가장 난이도가 높은 게임이라고 한다.
 어떤 패턴이 어떤 카드에서 나왔는지 기억하고 있어야 합니다. 까먹으면 찍어야함
 하지만 똑같은 문제가 연달아 나왔을대 절때 틀리면 안된다....
 파훼법이 있다고 한다
+
+100문항 정도 푼다고 합니다...
+예를 들어 온도카드만 나왔을 때 흐림이 자주 되면 흐림만 계속 체크
+풍향,기압 조합에서 맑음이 자주나오더라 -> 그럼 맑음 계속 체크해
+
+-------------->   하나의 카드가 나왔을 때
+온도 습도 퓽향 기압     왼쪽에서 오른쪽으로 갈수록 맑음
+즉, 온도는 흐림이 강하고, 습도, 풍향, 기압 순으로 맑아 기압은 거의다 맑음
+
+온도, 습도 조합은 -> 흐림
+
+풍향, 기압 조합은 -> 맑음 으로 가는게 유리합니다
