--- a/AI게임/날씨맞히기.html
+++ b/AI게임/날씨맞히기.html
@@ -20,5 +20,6 @@ AI면접에서 가장 난이도가 높은 게임이라고 한다.
 즉, 온도는 흐림이 강하고, 습도, 풍향, 기압 순으로 맑아 기압은 거의다 맑음
 
 온도, 습도 조합은 -> 흐림
-
 풍향, 기압 조합은 -> 맑음 으로 가는게 유리합니다
+
+하지만 참고용이니 참고만 하라고 하십니다 . 네 알겠습니다 !
