--- a/보상선호상황대처심층대화/심층대화.html
+++ b/보상선호상황대처심층대화/심층대화.html
@@ -22,6 +22,12 @@ ex) F&F의 단점을 말하시오 장점도 생각해보기
 지원 산업과 관련된 전공 3가지 개념을 나열해놓고 하나를 선택해서 
 적용사례를 간단하게 말해 보시오
 
+나에게 주어진 질문은
+1.당신은 외롭나요?
+2.동료중 외로운 사람이 있을 때 어떻게 조언을 해주려고 하나요?
+3.가장 외로움을 느낄 때는 언제라고 생각하시나요? 그 이유는 무엇인가요?
+4.만약 당신이 식당에서 다른사람 음식을 가져갔을 경우 , 음식을 이미 먹었을 경우 어떻게 할 것인가
+
 
 
 
